--- a/css/styles.css
+++ b/css/styles.css
@@ -470,6 +470,10 @@ img {
   font-weight: 500;
 }
 
+.subscribe-form-footer {
+  margin-left: auto;
+}
+
 .subscribe-form-input {
   border: 1px solid #fff;
   font-size: 12px;
