--- a/css/styles.css
+++ b/css/styles.css
@@ -452,36 +452,29 @@ img {
   fill: #f4f4fd;
 }
 
-.subscribe-form-footer {
+.subscribe-form-wrapper {
+  margin-left: auto;
+}
+.subscribe-form-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.subscribe-form {
   display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
   gap: 24px;
 }
 
-.subscribe-form-field {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.subscribe-form-label {
-  color: #ffffff;
-  font-weight: 500;
-}
-
-.subscribe-form-footer {
-  margin-left: auto;
-}
-
 .subscribe-form-input {
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
   font-size: 12px;
+  line-height: 2;
   border-radius: 4px;
   width: 264px;
   height: 40px;
-  padding: 8px 16px;
-  color: #fff;
+  padding-left: 16px;
+  color: #ffffff;
   background-color: transparent;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -493,16 +486,16 @@ img {
 }
 
 .subscribe-form-input::placeholder {
-  color: currentColor;
+  color: #ffffff;
 }
 
 .subscribe-form-button {
-  min-height: 40px;
+  height: 40px;
   min-width: 165px;
+  color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -512,6 +505,7 @@ img {
 }
 .subscribe-button-icon {
   fill: currentColor;
+  margin-left: 16px;
 }
 /* #endregion */
 
