--- a/css/styles.css
+++ b/css/styles.css
@@ -470,6 +470,7 @@ img {
   border: 1px solid #ffffff;
   font-size: 12px;
   line-height: 2;
+  letter-spacing: 0.04em;
   border-radius: 4px;
   width: 264px;
   height: 40px;
@@ -524,8 +525,8 @@ img {
   visibility: hidden;
   pointer-events: none;
 
-  transition: opacity 400ms ease-in, visibility 400ms ease-in;
-  transition-delay: 150ms;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -539,22 +540,23 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-70%);
+  transform: translateX(-50%) translateY(-100%);
   width: 408px;
   min-height: 584px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   border-radius: 4px;
+  box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
 
   opacity: 0;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open .modal {
   transition-delay: 600ms;
-  transform: translateX(-50%) translateY(-50%) rotate(720deg);
+  transform: translateX(-50%) translateY(-50%);
   opacity: 1;
 }
 
@@ -564,28 +566,35 @@ img {
   right: 24px;
   width: 24px;
   height: 24px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover,
 .modal-close-button:focus {
   background-color: #404bbf;
-  border-color: transparent;
-  fill: #fff;
+  border: none;
+  fill: #ffffff;
 }
 
 .modal-caption {
-  padding-top: 48px;
-  padding-left: 12px;
+  text-align: center;
+  margin-bottom: 16px;
   max-width: 360px;
   font-weight: 500;
-  margin-bottom: 16px;
   color: #2e2f42;
 }
 
@@ -594,9 +603,12 @@ img {
 }
 
 .modal-form-label {
+  display: block;
   margin-bottom: 4px;
   color: #8e8f99;
   font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
 
 .modal-form-wrapper {
@@ -611,6 +623,7 @@ img {
   border: 1px solid #2e2f4266;
   border-radius: 4px;
   outline: transparent;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-input:focus {
@@ -627,15 +640,22 @@ img {
   fill: #4d5ae5;
 }
 
+.modal:nth-child(4) {
+  margin-bottom: 16;
+}
+
 .modal-form-comment {
   display: block;
   width: 100%;
   height: 120px;
   padding: 8px 16px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   font-size: 12px;
-  margin-bottom: 16px;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid #2e2f4266;
   border-radius: 4px;
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
@@ -659,11 +679,13 @@ img {
   border: 1px solid #2e2f4266;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .agreement-input:checked + .modal-form-box > .custom-checkbox {
+  border: none;
   background-color: #404bbf;
-  border-color: #404bbf;
+  fill: #f4f4fd;
 }
 
 .modal-form-box {
@@ -690,7 +712,7 @@ img {
   display: block;
   color: #fff;
   margin: 0 auto;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
