--- a/css/styles.css
+++ b/css/styles.css
@@ -545,12 +545,10 @@ img {
   min-height: 584px;
   padding: 72px 24px 24px 24px;
   border-radius: 4px;
-  box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
-
   opacity: 0;
-
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -579,8 +577,7 @@ img {
 }
 
 .modal-close-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover,
@@ -602,7 +599,8 @@ img {
   margin-bottom: 8px;
 }
 
-.modal-form-label {
+.modal-form-label,
+.modal-form-box {
   display: block;
   margin-bottom: 4px;
   color: #8e8f99;
@@ -640,8 +638,8 @@ img {
   fill: #4d5ae5;
 }
 
-.modal:nth-child(4) {
-  margin-bottom: 16;
+.comment-field {
+  margin-bottom: 16px;
 }
 
 .modal-form-comment {
@@ -678,6 +676,7 @@ img {
   border-radius: 2px;
   border: 1px solid #2e2f4266;
   cursor: pointer;
+  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
