--- a/css/styles.css
+++ b/css/styles.css
@@ -533,14 +533,13 @@ img {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
-  transition-delay: 0ms;
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-100%);
+  transform: translateX(-50%) translateY(-200%);
   width: 408px;
   min-height: 584px;
   padding: 72px 24px 24px 24px;
@@ -549,11 +548,11 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open .modal {
-  transition-delay: 600ms;
   transform: translateX(-50%) translateY(-50%);
   opacity: 1;
 }
